--- a/src/main/resources/static/user/point-list.html
+++ b/src/main/resources/static/user/point-list.html
@@ -24,9 +24,9 @@
 
 <header id="headers"></header>
 
-<div class="row mt-5 justify-content-center container">
-    <div class="col-4" id="menu"></div>
-    <div class="col-8">
+<div class="row mt-5 justify-content-center">
+    <div class="col-2 wrap" id="menu"></div>
+    <div class="col-8 wrap ms-4">
 
         <div class="row page-name">
             <h2 class="col-sm-12">포인트 사용/환불 내역</h2>
@@ -35,9 +35,9 @@
             <table>
                 <colgroup>
                     <col style="width: 10%;">
-                    <col style="width: 30%">
+                    <col style="width: 40%;">
                     <col style="width: 30%;">
-                    <col style="width: 30%;">
+                    <col style="width: 20%;">
                 </colgroup>
                 <thead>
                 <tr>
@@ -45,13 +45,13 @@
                         번호
                     </th>
                     <th scope="row">
-                        변동 타입
+                        타입
                     </th>
                     <th scope="row">
-                        변동 일자
+                        사용/환불 일자
                     </th>
                     <th scope="row">
-                        변동 금액
+                        사용/환불 금액
                     </th>
                 </tr>
                 </thead>
