--- a/src/main/resources/static/user/update-pw.html
+++ b/src/main/resources/static/user/update-pw.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Auction Seats</title>
-
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
-
     <script crossorigin="anonymous"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -18,7 +16,7 @@
     <script src="/js/token.js"></script>
     <script src="/js/basic.js"></script>
     <script src="/js/common-menu.js"></script>
-    <link href="/css/mypage.css" rel="stylesheet">
+    <link href="/css/mypage.css">
 </head>
 <body>
 
@@ -29,38 +27,26 @@
     <div class="col-8 wrap ms-4">
 
         <div class="row page-name">
-            <h2 class="col-sm-12">포인트 충전 내역</h2>
+            <h2 class="col-sm-12">비밀번호 수정</h2>
         </div>
-        <div class="table-d2-list text-center">
-            <table>
-                <colgroup>
-                    <col style="width: 10%;">
-                    <col style="width: 50%;">
-                    <col style="width: 20%;">
-                    <col style="width: 20%;">
-                </colgroup>
-                <thead>
-                <tr>
-                    <th scope="row">
-                        번호
-                    </th>
-                    <th scope="row">
-                        결제 번호
-                    </th>
-                    <th scope="row">
-                        충전 일자
-                    </th>
-                    <th scope="row">
-                        충전 금액
-                    </th>
-                </tr>
-                </thead>
-                <tbody class="list-tb-body">
-                <tr class="list-tb-tr"></tr>
-                </tbody>
-            </table>
+        <div class="form-control px-4 py-3">
+            <div class="form-group">
+                <label class="fs-5" for="update-password"><img class="logo" src="/images/pw-icon.png"/>비밀번호</label>
+                <input class="form-control password" id="update-password" name="password" type="password">
+                <span>영어, 숫자, 특수문자(!,@,#,$,%,^) 조합으로 최소 8자, 최대 15자로 입력해주세요.</span><br>
+                <span id="update-password-span" style="color: red;"></span>
+            </div>
+            <div class="form-group">
+                <label class="fs-5" for="update-password-check"><img class="logo" src="/images/pw-icon.png"/>비밀번호
+                    확인</label>
+                <input class="form-control password-check" id="update-password-check" name="password-check"
+                       type="password">
+                <span class="passwordMatchMessage"></span>
+            </div>
+            <div class="form-group mt-3 user-input-div ">
+                <button class="btn user-input-btn  w-100 custom-btn" id="update-password-btn" type="submit">수정</button>
+            </div>
         </div>
-        <div class="pagination d-flex justify-content-center"></div>
     </div>
 </div>
 </body>
@@ -68,21 +54,22 @@
     $("#headers").load("/header.html", function (response, status, xhr) {
         checkLoginStatus();
     });
-
     $("#menu").load("/user/common-menu.html", function (response, status, xhr) {
         $(document).ready(function () {
             // 모든 링크에서 'active' 클래스 제거
             $("#settings-menu a").removeClass("active");
-
             // 클릭된 링크에 'active' 클래스 추가
-            $("#charge-point-list").addClass("active");
-
-            reissueToken((token => {
-                getPointChargeList(token, 0);
-            }));
+            $("#update-user-password").addClass("active");
         });
     });
-
-
+    $(document).ready(function () {
+        $("#update-password, #update-password-check").on("input", checkPasswordMatch);
+    });
+    let id = getUserId();
+    $("#update-password-btn").on("click", function () {
+        reissueToken((token => {
+            updatePassword(token, id);
+        }));
+    });
 </script>
 </html>
