--- a/src/main/resources/static/user/withraw.html
+++ b/src/main/resources/static/user/withraw.html
@@ -24,9 +24,9 @@
 
 <header id="headers"></header>
 
-<div class="row mt-5 justify-content-center container">
-    <div class="col-4" id="menu"></div>
-    <div class="col-8">
+<div class="row mt-5 justify-content-center">
+    <div class="col-2 wrap" id="menu"></div>
+    <div class="col-8 wrap ms-4">
 
         <div class="row page-name">
             <h2 class="col-sm-12">회원 탈퇴</h2>
