--- a/src/main/resources/static/reservation/reservation-list.html
+++ b/src/main/resources/static/reservation/reservation-list.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Auction Seats</title>
-
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
-
     <script crossorigin="anonymous"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -22,9 +20,7 @@
     <link href="/css/mypage.css" rel="stylesheet">
 </head>
 <body>
-
 <header id="headers"></header>
-
 <div class="row mt-5 justify-content-center">
     <div class="col-2" id="menu"></div>
     <div class="col-8">
@@ -34,13 +30,13 @@
         <div class="table-d2-list text-center">
             <table>
                 <colgroup>
-                    <col style="width: 10%;">
-                    <col style="width: 15%">
                     <col style="width: 20%;">
-                    <col style="width: 15%;">
-                    <col style="width: 15%;">
-                    <col style="width: 15%;">
+                    <col style="width: 15%">
+                    <col style="width: 30%;">
                     <col style="width: 10%;">
+                    <col style="width: 10%;">
+                    <col style="width: 10%;">
+                    <col style="width: 5%;">
                 </colgroup>
                 <thead>
                 <tr>
@@ -54,7 +50,8 @@
                         공연명
                     </th>
                     <th scope="row">
-                        이용일/예매 수량
+                        이용일<br>
+                        예매 수량
                     </th>
                     <th scope="row">
                         취소 가능 날짜
@@ -78,21 +75,16 @@
     $("#headers").load("/header.html", function (response, status, xhr) {
         checkLoginStatus();
     });
-
     $("#menu").load("/user/common-menu.html", function (response, status, xhr) {
         $(document).ready(function () {
             // 모든 링크에서 'active' 클래스 제거
             $("#settings-menu a").removeClass("active");
-
             // 클릭된 링크에 'active' 클래스 추가
             $("#reservation-list").addClass("active");
-
             reissueToken((token => {
                 getReservationList(token, 0);
             }));
         });
     });
-
-
 </script>
 </html>
